# nmpc_hls

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  file.txt
app/matlab_ws/: InvPendulum_xref.m  QuadrotorNMPC.m  QuadrotorSystem.m  Quadrotor_xref.m  drone_ring_nodir.mat  drone_spiral_dir.mat  invPend_.mat  plot_drone_cpp.m
hw/hdl/: readme.MD
hw/hdl/scripts/: create_project.tcl
hw/hdl/scripts/designs/: design_1.tcl
hw/hls/: readme.MD
hw/hls/scripts/: hls_script_costF.tcl  hls_script_model.tcl  hls_script_pseudorand.tcl  hls_script_pso.tcl  hls_script_pso_execute.tcl
hw/hls/source/: readme.MD
hw/hls/source/config/inverted_pendulum/: project_config.txt  simulation_config.txt
hw/hls/source/config/sniffbot/: project_config.txt
hw/hls/source/include/: config.hpp  hls_nonlinear_solver.hpp  hls_pseudorand.hpp  hls_pso.hpp
hw/hls/source/matlab/: drone_kpso.m  drone_pso.m  inverted_pendulum_kpso.m
hw/hls/source/src/: hls_nonlinear_solver.cpp  main_hls_model.cpp  main_hls_pseudorand.cpp  main_hls_system.cpp
matlab/: InvPendulumNMPC.m  InvPendulumSystem.m  InvPendulumSystem.m~  Inv_mma.old.m  QuadrotorLM.m  QuadrotorNMPC.m  QuadrotorStateFcn.m  animateQuadrotor.m  data_line.mat  data_ring.mat  data_ring_noInputWeights.mat  data_spiral.mat  data_spiral_noInputWeights.mat  getQuadrotorDynamicsAndJacobian.m  invPend_.mat  main_InvPendulum.m  main_Quadrotor.m  mma.old.m  nmpc.m  nmpc_sim.m  plot_drone_cpp.m  plot_invPendulum_cpp.m  plot_invPendulum_cpp.m~  system_drone.m  x_ref.m
matlab/model_cpp/: drone_model.c  drone_model.mexmaci64  model_drone.m  model_drone.prj  test_model_cpp.m
misc/: create_fast_sin_cos_table.py  extra.py  fast_sin_cos.hpp  file.txt  hls_arith_aux_functions.hpp  hls_pso.cpp  hls_sniffbot.hpp  vivado_tcl.tcl
nmpc_pso/: .gitignore  CMakeLists.txt
nmpc_pso/config/inverted_pendulum/: inverted_pendulum_config.txt  project_config.txt  pso_config.txt  simulation_config.txt  simulation_config_with_disturbances.txt
nmpc_pso/config/sniffbot/: project_config.txt  pso_config.txt  simulation_config_ring.txt  sniffbot_config.txt
nmpc_pso/config/vant/: project_config_vant.txt  pso_config_vant.txt  simulation_config_vant.txt  vant_config.txt  vant_config_COMENTADO.txt
nmpc_pso/include/: aux_functions.hpp  config.h  export_data.hpp  fast_sin_cos.h  nonlinear_solver.hpp  plot.hpp  project.hpp  pso.hpp  random_number.hpp  read_from_file.hpp  simulation.hpp  svm.hpp  system.hpp
nmpc_pso/matlab/: nmpc_sim.m
nmpc_pso/src/: aux_functions.cpp  export_data.cpp  fast_sin_cos.cpp  main.cpp  plot.cpp  project.cpp  pso.cpp  random_number.cpp  read_from_file.cpp  simulation.cpp  svm.cpp  system.cpp
nmpc_pso/src/models/: inverted_pendulum.cpp  inverted_pendulum.hpp  sniffbot.cpp  sniffbot.hpp  vant.cpp  vant.hpp
nmpc_pso_hls/: .gitignore  CMakeLists.txt  aux_functions.hpp  config.hpp  fast_sin_cos.hpp  hls_inverted_pendulum.hpp  hls_pseudorand.hpp  hls_pso.cpp  hls_pso.hpp  hls_sniffbot.hpp  hls_system.hpp  main_hls_model.cpp  main_hls_pso.cpp  main_hls_rand.cpp  main_hls_system.cpp  read_from_file.hpp  readme.MD  test.cpp
nmpc_pso_hls/config/sniffbot/: project_config.txt  simulation_config_ring.txt  simulation_config_spiral.txt
nmpc_pso_hls/include/: aux_functions.hpp  config.hpp  hls_model.hpp  hls_nonlinear_solver.hpp  hls_pseudorand.hpp  hls_pso.hpp  hls_sniffbot.hpp  hls_system.hpp
nmpc_pso_hls/include/models/: hls_arith_aux_functions.hpp  hls_inverted_pendulum.hpp  hls_sniffbot.hpp
nmpc_pso_hls/matlab/: inverted_pendulum_kpso.m  inverted_pendulum_pso.m  test.m
nmpc_pso_hls/src/: aux_functions.cpp  hls_nonlinear_solver.cpp  hls_pseudorand.cpp  hls_pso.cpp  main_hls_model.cpp  main_hls_pseudorand.cpp  main_hls_pso.cpp  main_hls_system.cpp  main_test_fast_sincos.cpp
nmpc_pso_hls/vitis_hls_ws/: hls_script_costF.tcl  hls_script_model.tcl  hls_script_pseudorand.tcl  hls_script_pso.tcl  hls_script_pso_costF.tcl  hls_script_pso_detect_min.tcl  hls_script_pso_fsm.tcl  hls_script_pso_init_S.tcl  hls_script_pso_update.tcl
nmpc_pso_hls/vivado_ws/: design_1.tcl
nmpc_pso_xhls/: .gitignore  CMakeLists.txt  main_hls_pso.cpp  readme.MD
nmpc_pso_xhls/config/inverted_pendulum/: simulation_config.txt
nmpc_pso_xhls/config/sniffbot/: simulation_config_ring.txt
nmpc_pso_xhls/include/: aux_functions.hpp  config.hpp  current_model.hpp  export_data.hpp  inverted_pendulum.hpp  nonlinear_solver.hpp  project.hpp  pso.hpp  read_from_file.hpp  simulation.hpp  sniffbot.hpp  system.hpp  wrapper_nonlinear_solver.hpp
nmpc_pso_xhls/matlab/: nmpc_sim.m
nmpc_pso_xhls/src/: aux_functions.cpp  inverted_pendulum.cpp  project.cpp  pso.cpp  simulation.cpp  sniffbot.cpp  system.cpp
nmpc_pso_xhls/src/test/: main.cpp  main_hls.cpp
